# she_base64

./: BuildDependencies.sh  CMakeLists.txt  README.md  TODO.md  coverage_generation.sh
cmake/: she_base64-config.cmake
coverage/: coverage.info
example/: CMakeLists.txt  main.cpp
include/sheBase64/: sheBase64.h
include/she_base64/: she_base64.h
src/: sheBase64.cpp  sheBase64.h  she_base64.cpp  she_base64.h
test/: m1_she_base64_test.h  m2_compare_test.h  main.cpp
test/FunctionalTesting/: Normal.h
test/base64/: README.md  base64.h
